fix/ remove redundant horizontal scroll

--- a/src/app/features/home/home.scss
+++ b/src/app/features/home/home.scss
@@ -1,6 +1,6 @@
 .welcome-card {
-  padding: .6rem;
-  margin: 1rem;
+  padding: 10px;
+  margin: 10px;
 
   mat-card-title {
     font-size: 32px;
