--- a/src/app/features/product/product.scss
+++ b/src/app/features/product/product.scss
@@ -4,7 +4,7 @@
   overflow: auto;
   margin: 0 auto;
   border-radius: 10px;
-  padding: 1rem;
+  padding: 10px;
 
   table {
     width: 100%;
